--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,17 @@
 /* 
     General Styles
 */
+.navbar_img{
+    width: 120px;
+    height: 90px;
+    margin-left: 30px
+}
+
+.btn_navbar {
+    margin-right: 50px;
+    border: none;
+    border-radius: 5px;
+    height: 50px;
+    width: 140px;
+    background-color: rgb(120, 189, 189);
+}
