--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,10 @@
     width: 140px;
     background-color: rgb(120, 189, 189);
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+}
