--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -6,3 +6,30 @@
     padding: 10px;
     margin-top: 80px;
 }
+
+.form-label {
+    margin-top: 15px;
+}
+
+.row-final{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn_save {
+    background:none;
+    color: rgb(120, 189, 189);
+    border: none;
+    margin-top: 30px;
+    margin-right: 30px;
+    margin-bottom: 20px;
+}
+
+.back_register {
+    margin-right: 20px;
+    margin-top: 30px;
+    color: black;
+    text-decoration: none;
+    background: none;
+    border: none;
+}
