--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,7 +4,14 @@
     border: 2px;
     border-style: solid;
     border-radius: 10px;
+    padding-right: 10px;
+    margin-right: 5px
+}
 
+.container {
+    align-items:center ;
+    padding-left: 0;
+    padding-right: 20px;
 }
 .fas {
     margin-right: 20px;
@@ -18,7 +25,7 @@
     width: 100px;
     height: 100px;
     margin-top: 40px;
-    margin-left: 60px;
+    margin-left: 20px;
 }
 
 .user_edit {
@@ -31,7 +38,11 @@
     width: 30px;
     height: 30px;
 }
+
 .edition_box {
     margin-top: 60px;
-    margin-right: 80px;
+}
+
+.col-8 {
+    margin-left: 20px;
 }
