--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,11 +4,10 @@
 .navbar_img{
     width: 120px;
     height: 90px;
-    margin-left: 30px
+    margin-left: 10%
 }
 
 .btn_navbar {
-    margin-right: 50px;
     border: none;
     border-radius: 5px;
     height: 50px;
@@ -16,3 +15,12 @@
     background-color: rgb(120, 189, 189);
 }
 
+.navbar {
+    margin-right: 10%;
+    padding-right: 10%;
+    display: flex;
+}
+
+.app {
+    padding: 5%;
+}
