--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -3,8 +3,12 @@
     border-style: solid;
     border-color: black;
     border-radius: 10px;
-    padding: 10px;
-    margin-top: 80px;
+    padding: 4%;
+    margin-top: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
+    justify-content: start;
+    align-items:center
 }
 
 .form-label {
@@ -21,7 +25,6 @@
     color: rgb(120, 189, 189);
     border: none;
     margin-top: 30px;
-    margin-right: 30px;
     margin-bottom: 20px;
 }
 
@@ -32,4 +35,8 @@
     text-decoration: none;
     background: none;
     border: none;
+}
+
+.row-final {
+    margin-right: 10%;
 }
